# sl-console

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: alternate_screen.rs  alternate_screen_raw.rs  async.rs  click.rs  color.rs  commie.rs  debug_events.rs  detect_color.rs  is_tty.rs  keys.rs  minesweeper.rs  mouse.rs  rainbow.rs  read.rs  rustc_fun.rs  simple.rs  size.rs  truecolor.rs
src/: color.rs  console.rs  cursor.rs  event.rs  input.rs  lib.rs  raw.rs  screen.rs  termasync.rs  termasync_unix.rs
src/sys/redox/: attr.rs  tty.rs
src/sys/unix/: attr.rs  console.rs  mod.rs  size.rs  tty.rs
src/sys/windows/: attr.rs  console.rs  mod.rs  size.rs  tty.rs
