[package]
name = "sl-console"
version = "0.9.0"
authors = ["ticki <Ticki@users.noreply.github.com>", "gycos <alexandre.bury@gmail.com>", "IGI-111 <igi-111@protonmail.com>"]
description = "A bindless library for manipulating terminals."
repository = "https://gitlab.redox-os.org/redox-os/termion"
documentation = "https://docs.rs/termion"
license = "MIT"
keywords = ["tty", "color", "terminal", "password", "tui"]
exclude = ["target", "CHANGELOG.md", "image.png", "Cargo.lock"]
edition = "2018"

[dependencies]
numtoa = "0.2"
lazy_static = "1.4.0"

[target.'cfg(all(not(target_os = "redox"), not(windows)))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"
redox_termios = "0.1"

[target.'cfg(windows)'.dependencies]
crossterm_winapi = "0.8"
crossbeam-channel = "0.5"
