[package]
name = "sl-console"
version = "0.10.1"
authors = [
    "ticki <Ticki@users.noreply.github.com>",
    "gycos <alexandre.bury@gmail.com>",
    "IGI-111 <igi-111@protonmail.com>",
    "Steven Stanfield <stanfield@scarecrowtech.com>",
    "Price Clark <uofantarctica.edu@gmail.com>"
]
description = "A bindless library for manipulating terminals."
repository = "https://github.com/sl-sh-dev/sl-console"
license = "MIT"
keywords = ["tty", "color", "terminal", "password", "tui"]
exclude = ["target", "CHANGELOG.md", "image.png", "Cargo.lock"]
edition = "2018"

[dependencies]
numtoa = "0.2"
lazy_static = "1.4.0"
parking_lot = "0.11"
scopeguard = "1.1.0"
log = "0.4.14"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
simple_logger = "1.11.0"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.9", features = ["winbase", "consoleapi", "processenv"] }
crossbeam-channel = "0.5"
